2004-09-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs: Fix mtime to time ticks conversion.

2004-07-20  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.desktop.in: Add MimeType stuff.

2004-07-12  Bryan Forbes  <bryan@reigndropsfall.net>

	* libmuine/player-gst.c: Fix issue where big endian machines don't
	report the correct time.

2004-07-13 Hile Tuohela <hile@iki.fi>

	* Added Finnish translation

2004-07-03  Lee Willis <lee@leewillis.co.uk>

	* src/CoverDatabase.cs:
	Don't compare excess spaces when searching for covers, and work around
	an Amazon bug where the wrong image URL is returned

2004-06-30  Alastair Porter  <alastair@linuxexperience.com>

	* muine.spec.in: Update.

2004-06-29  Brian K Nickel  <kerrick@cox.net>

	* libmuine/player-gst.c: (player_stop), (player_pause):

	Unlock audio device when paused.

2004-06-19  Fernando Herrera  <fherrera@onirica.com>
2004-06-20  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.applications:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Support for multiple files in the command line (play the first, enqueue
	the rest)

2004-06-20  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/Song.cs:

	Make FitsCriteria a method of Song and Album.

2004-06-18  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.6.3.99.

2004-06-18  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:
	* configure.in:
	* src/About.cs:
	* src/NotificationAreaIcon.cs:

	Mono Beta 3 support (Patch provided by jeroen, edd and latexer),
	and released 0.6.3.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Small logic fix.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/muine.applications:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Support playing files that are not in the library.  Set Muine as 
	your default ogg/mp3 handler in nautilus and you're in heaven.
