@@ -1,9 +1,0 @@
-muine
-	command=muine
-	name=Muine Music Player
-	can_open_multiple_files=true
-	expects_uris=false
-	requires_terminal=false
-	startup_notify=true
-	supported_uri_schemes=file
-	mime_types=audio/x-mpegurl,application/x-ogg,application/ogg,application/x-flac,audio/x-flac,audio/x-mp3,audio/x-mpeg,audio/mpeg
